@@ -5,6 +5,7 @@ import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
+import java.util.Base64;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
@@ -58,7 +59,7 @@ public class AESHelper {
             //这里用Base64Encoder中会找不到包
             //解决办法：
             //在项目的Build path中先移除JRE System Library，再添加库JRE System Library，重新编译后就一切正常了。
-            String AES_encode = new String(new BASE64Encoder().encode(byte_AES));
+            String AES_encode = new String(Base64.getEncoder().encode(byte_AES));
             //11.将字符串返回
             return AES_encode;
         } catch (NoSuchAlgorithmException e) {
@@ -105,8 +106,13 @@ public class AESHelper {
             //7.初始化密码器，第一个参数为加密(Encrypt_mode)或者解密(Decrypt_mode)操作，第二个参数为使用的KEY
             cipher.init(Cipher.DECRYPT_MODE, key);
             //8.将加密并编码后的内容解码成字节数组
+<<<<<<< HEAD
             byte[] byte_content = new Base64().decodeBuffer(content);
             *//*
+=======
+            byte[] byte_content = Base64.getDecoder().decode(content);
+            /*
+>>>>>>> 0803b03d5bfc3e8fb6ea9882c9e26d5c39ac8f00
              * 解密
              *//*
             byte[] byte_decode = cipher.doFinal(byte_content);
